<resources>
    <string name="app_name">Loto</string>
    <string name="test_textView">Test TextView</string>
    <string name="click_d_01">←「お薦め数字」を取得</string>
    <string name="helloW">Hello World</string>
    <string name="loto6">ロト６</string>
    <string name="loto7">ロト７</string>
    <string name="mini">ミニロト</string>
    <string name="numb3">ナンバーズ３</string>
    <string name="numb4">ナンバーズ４</string>
    <string name="bingo">ビンゴ５</string>
    <string name="ikkatsu">一括で取得</string>
    <string name="Qreset">リセット</string>
</resources>
