<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:visibility="visible"
    android:background="#e6cf8a"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/button_Qloto6"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="32dp"
        android:background="#e6dab8"
        android:text="@string/loto6"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_Qloto7"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#e6dab8"
        android:text="@string/loto7"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qloto6" />

    <Button
        android:id="@+id/button_Qmini"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#e6dab8"
        android:text="@string/mini"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qloto7" />

    <Button
        android:id="@+id/button_Qnumb3"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#e6dab8"
        android:text="@string/numb3"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qmini" />

    <Button
        android:id="@+id/button_Qnumb4"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#e6dab8"
        android:text="@string/numb4"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qnumb3" />

    <Button
        android:id="@+id/button_Qbingo"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:background="#e6dab8"
        android:text="@string/bingo"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qnumb4" />

    <Button
        android:id="@+id/button_Qikkatsu"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="16dp"
        android:background="#e6c35c"
        android:text="@string/ikkatsu"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_Qbingo" />

    <Button
        android:id="@+id/button_Qreset"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="#e6ac00"
        android:text="@string/Qreset"
        android:textColor="#332808"
        android:visibility="visible"
        app:layout_constraintStart_toEndOf="@+id/button_Qikkatsu"
        app:layout_constraintTop_toBottomOf="@+id/bingoV" />

    <TextView
        android:id="@+id/loto6V"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_Qloto6"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/loto7V"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_Qloto7"
        app:layout_constraintTop_toBottomOf="@+id/loto6V" />

    <TextView
        android:id="@+id/numb3V"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_Qnumb3"
        app:layout_constraintTop_toBottomOf="@+id/miniV" />

    <TextView
        android:id="@+id/miniV"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_Qmini"
        app:layout_constraintTop_toBottomOf="@+id/loto7V" />

    <TextView
        android:id="@+id/numb4V"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        app:layout_constraintStart_toEndOf="@+id/button_Qnumb4"
        app:layout_constraintTop_toBottomOf="@+id/numb3V" />

    <TextView
        android:id="@+id/bingoV"
        android:layout_width="260dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:width="228dp"
        android:height="38dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:paddingTop="1dp"
        android:text="@string/click_d_01"
        android:textColor="#332808"
        android:textSize="15sp"
        android:lines="1"
        android:ellipsize="end"
        app:layout_constraintStart_toEndOf="@+id/button_Qbingo"
        app:layout_constraintTop_toBottomOf="@+id/numb4V" />

</androidx.constraintlayout.widget.ConstraintLayout>